# monic-framework

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml
examples/basic/: main.py
examples/cli/: main.py
examples/http/: README.md  main.py
examples/openapi/: README.md  basic.py  fastapi_integration.py  multi_registry.py  requirements.txt  types.py
examples/profiling/: main.py
monic/: __init__.py  version.py
monic/expressions/: __init__.py  context.py  exceptions.py  interpreter.py  parser.py  profiler.py  registry.py  security.py
monic/extra/: __init__.py  openapi.py
monic/runtime/: inspector.py  json.py  numpy.py  pandas.py  polars.py
tests/expressions/: test_interpreter_async.py  test_interpreter_basic_expr.py  test_interpreter_boolean_expr.py  test_interpreter_class_def.py  test_interpreter_complex.py  test_interpreter_coverage1.py  test_interpreter_coverage2.py  test_interpreter_coverage3.py  test_interpreter_coverage4.py  test_interpreter_coverage5.py  test_interpreter_coverage6.py  test_interpreter_coverage7.py  test_interpreter_error_handling.py  test_interpreter_expr.py  test_interpreter_function_call.py  test_interpreter_generator.py  test_interpreter_match.py  test_interpreter_named_expr.py  test_interpreter_registry.py  test_interpreter_security.py  test_interpreter_stmt_pass.py  test_interpreter_stmt_return.py  test_interpreter_stmt_with.py  test_interpreter_timeout.py  test_profiler.py  test_runtime.py
tests/runtime/: test_runtime.py
