[project]
name = "monic-framework"
version = "0.1.0"
description = "Monic Framework"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Cognica, Inc.", email = "support@cognica.io" }]
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
